--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <title>在线预览</title>
 <meta name="Keywords" >
 <meta name="description" >
-<link href="demo/css/topbar.css" type="text/css" rel="Stylesheet">
-<link href="demo/css/style_kj.css" type="text/css" rel="stylesheet">
-<link href="demo/css/dialog.css" type="text/css" rel="Stylesheet">
-<link href="demo/css/demo.css" type="text/css" rel="stylesheet">
-<script src="demo/js/jquery-1.2.pack.js" type="text/javascript">
+<link href="css/topbar.css" type="text/css" rel="Stylesheet">
+<link href="css/style_kj.css" type="text/css" rel="stylesheet">
+<link href="css/dialog.css" type="text/css" rel="Stylesheet">
+<link href="css/demo.css" type="text/css" rel="stylesheet">
+<script src="js/jquery-1.2.pack.js" type="text/javascript">
 </script>
 	
 <script type="text/javascript">
@@ -81,7 +81,7 @@ function Responsive($a) {
 <div id="switcher1">
   <div class="center">
     <ul>
- <li class="logoTop"><a href="http://cinoliu.github.io">作品展示</a> - 【在线浏览】！请选择</li>
+ <li class="logoTop"><a href="http://cinoliu.github.io/">作品展示</a> - 【在线浏览】！请选择</li>
       <div id="Device">
         <li class="device-monitor"><a href="javascript:"><div class="icon-monitor active"></div></a></li>
         <li class="device-mobile"><a href="javascript:"><div class="icon-tablet"> </div></a></li>
@@ -97,7 +97,7 @@ function Responsive($a) {
   </div>
   </div>
    <div id="iframe-wrap">
-    <iframe id="iframe" src="https://apps.lastmilecn.com/apple/" frameborder="0" width="100%" height="587px"> </iframe>
+    <iframe id="iframe" src="http://cinoliu.github.io/" frameborder="0" width="100%" height="587px"> </iframe>
    </div>
    <script type="text/javascript">
 
@@ -134,9 +134,6 @@ function Responsive($a) {
 	        }
 	    }
 
-
-
-	 
 
 
 	   
